--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,25 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 100px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  padding-left: 40px;
 }
 
-.App-link {
-  color: #61dafb;
+#customerForm {
+  width: 300px;
+  background-color: whitesmoke;
+  margin: auto;
+  padding: 20px;
+  text-align: center;
+  margin-top: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#viewCustomers {
+  background-color: rgb(240, 240, 240);
+  margin: 30px 80px;
+  padding: 10px;
+  text-align: center;
 }
